# agentforge

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py  setup_project.sh
agentforge_core/: __init__.py
agentforge_core/agent/: __init__.py  base.py  registry.py  system.py
agentforge_core/agent/frameworks/: __init__.py  atomic.py  base.py  custom.py
agentforge_core/llm/: __init__.py  openai.py  provider.py
